--- a/index.html
+++ b/index.html
@@ -28,27 +28,24 @@
       </div>
       <!-- testando js -->
       <div id="area">
-        <button id="circle1" onclick="botao_1(), botao_2()"></button>
-      </div>
-
-      <!-- <div class="box" onclick="cliciu()">
-        <button id="circle1"></button>
-        <button id="circle2"></button>
-        <button id="circle3"></button>
-        <button id="circle4"></button>
+        <div class="box">
+        <button id="circle1" class="color-green"></button>
+        <button id="circle2" class="color-green"></button>
+        <button id="circle3" class="color-green"></button>
+        <button id="circle4" class="color-green"></button>
       </div>
       <div class="box">
-        <button id="circle5"></button>
-        <button id="circle6"></button>
-        <button id="circle7"></button>
-        <button id="circle8"></button>
+        <button id="circle5" class="color-green"></button>
+        <button id="circle6" class="color-green"></button>
+        <button id="circle7" class="color-green"></button>
+        <button id="circle8" class="color-green"></button>
       </div>
       <div class="box">
-        <button id="circle9"></button>
-        <button id="circle10"></button>
-        <button id="circle11"></button>
-        <button id="circle12"></button>
-      </div> -->
+        <button id="circle9" class="color-green"></button>
+        <button id="circle10" class="color-green"></button>
+        <button id="circle11" class="color-green"></button>
+        <button id="circle12" class="color-green"></button>
+      </div>
     </div>
 
     <!-- FOOTER -->
